Actions
Bug #4788
closedmac shouldn't abuse ddi_get_time(9f)
Start date:
2014-04-21
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
needs-triage
Gerrit CR:
Description
ddi_get_time() returns a Unix timestamp based on the current TOD. If the TOD setting changes for whatever reason (daylight saving time adjustments, NTP), the value returned by ddi_get_time() may change non-monotonically. This makes it unsuitable for calculating timeouts and wait times.
Related issues
Updated by Electric Monk about 8 years ago
- Status changed from New to Closed
- % Done changed from 80 to 100
git commit 4d6a58d3c7586ed5866f9309d460081a9102c5e6
commit 4d6a58d3c7586ed5866f9309d460081a9102c5e6 Author: Josef 'Jeff' Sipek <josef.sipek@nexenta.com> Date: 2014-05-14T23:37:59.000Z 4788 mac shouldn't abuse ddi_get_time(9f) Reviewed by: Hans Rosenfeld <hans.rosenfeld@nexenta.com> Reviewed by: Robert Mustacchi <rm@joyent.com> Approved by: Richard Lowe <richlowe@richlowe.net>
Actions